# SymbolicFactory

./: .gitignore  CMakeLists.txt  README.md  SymbolicBase.cpp  SymbolicBase.hpp  SymbolicFactory.cpp  SymbolicFactory.hpp  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-multi-platform.yml
SymbolicFactory/: CMakeLists.txt  SymbolicBase.cpp  SymbolicBase.hpp  SymbolicFactory.cpp  SymbolicFactory.hpp
tests/: CMakeLists.txt
tests/main/: CMakeLists.txt  SymbolicFactoryTest.cpp  ref.cpp
tests/pair_llm/: CMakeLists.txt  README.md  boost_unit_test_prompt.txt  llm_SymbolicFactory.cpp  pair_llm.py  utils.py
